# detsrv-plugins

./: CMakeLists.txt  README.md  launch.json  main.cpp  plugintest.cpp
include/detcore/: detection.h
include/detsvr/: IDetect.h  detectionresult.h
minic/: CMakeLists.txt  minic.cpp  minic.h
trtyolov5/: CMakeLists.txt  common.hpp  trtyolov5.cpp  trtyolov5.h
uavship/: CMakeLists.txt  trtyolov5.cpp  trtyolov5.h  uavship.cpp  uavship.h
